Modified Mar 3 discussion

--- a/Eratosthenes.ipynb
+++ b/Eratosthenes.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "74dbed17-52d6-4d60-b65f-e4d4900c19ac",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,16 +67,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "73c35bfa-e876-452f-96d9-c083c6c397d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_get_primes_1():\n",
+    "    assert get_primes_1(55) == [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53]\n",
+    "    \n",
+    "test_get_primes_1()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bdd29d53-1ccf-44f7-8555-78bb859001c0",
-   "metadata": {},
+   "metadata": {
+    "user_expressions": []
+   },
    "source": [
     "Now, let's do something a little bit more efficient. This code should give me the same than before, but in less time. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "6faf830e-76a3-49cf-a6ed-107a121b2376",
    "metadata": {},
    "outputs": [
@@ -86,7 +101,7 @@
        "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +153,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
+   "id": "4066f5bf-f7a1-456c-a099-ff8e90cd7d50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_get_primes_2():\n",
+    "    assert get_primes_2(55) == [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53]\n",
+    "    \n",
+    "test_get_primes_2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "d4f968c5-db99-4fac-bec4-1472586525ca",
    "metadata": {},
    "outputs": [
@@ -164,9 +192,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "bb21148b-c8fb-49d7-9c00-a9057bc45b13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_get_primes(implementation):\n",
+    "    if implementation == 1:\n",
+    "        assert get_primes_1(55) == [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53]\n",
+    "    else:\n",
+    "        assert get_primes_2(55) == [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41, 43, 47, 53]\n",
+    "    \n",
+    "test_get_primes(1)\n",
+    "test_get_primes(2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "840d9c6e-a4f6-4ea8-b28a-00d8c56197cf",
-   "metadata": {},
+   "metadata": {
+    "user_expressions": []
+   },
    "source": [
     "## Long Run: proportion of primer numbers\n",
     "\n",
@@ -175,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "ac5d3c8d-9202-4c31-99c8-58196ec328e0",
    "metadata": {},
    "outputs": [
@@ -183,8 +230,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 19 ms, sys: 0 ns, total: 19 ms\n",
-      "Wall time: 18.7 ms\n"
+      "CPU times: user 17.8 ms, sys: 1.62 ms, total: 19.5 ms\n",
+      "Wall time: 19 ms\n"
      ]
     }
    ],
